--- a/package.json
+++ b/package.json
@@ -10,29 +10,29 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
+    "@expo/metro-runtime": "~6.1.2",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/native-stack": "^7.3.21",
     "axios": "^1.11.0",
     "dotenv": "^17.2.3",
-    "expo": "53.0.22",
-    "expo-constants": "~17.1.7",
-    "expo-dev-client": "~5.2.4",
-    "expo-device": "~7.1.4",
-    "expo-font": "~13.3.2",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-notifications": "~0.31.4",
-    "expo-secure-store": "~14.2.4",
-    "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5",
+    "expo": "54.0.22",
+    "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.16",
+    "expo-device": "~8.0.9",
+    "expo-font": "~14.0.9",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-notifications": "~0.32.12",
+    "expo-secure-store": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-dom": "19.0.0",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.5"
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -41,5 +41,9 @@
   "overrides": {
     "react-native-reanimated": "~3.10.1"
   },
-  "private": true
+  "private": true,
+  "resolutions": {
+  "react-native-safe-area-context": "5.6.2"
+}
+
 }
