--- a/package.json
+++ b/package.json
@@ -36,14 +36,15 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@react-native-community/cli": "^19.1.0"
+    "@react-native-community/cli": "^19.1.0",
+    "@types/react": "~19.1.10",
+    "typescript": "~5.9.2"
   },
   "overrides": {
     "react-native-reanimated": "~3.10.1"
   },
   "private": true,
   "resolutions": {
-  "react-native-safe-area-context": "5.6.2"
-}
-
+    "react-native-safe-area-context": "5.6.2"
+  }
 }
