--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -82,14 +82,15 @@ def enableProguardInReleaseBuilds = (findProperty('android.enableProguardInRelea
 def jscFlavor = 'io.github.react-native-community:jsc-android:2026004.+'
 
 android {
+    
     ndkVersion rootProject.ext.ndkVersion
 
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.yourname.aiassistant'
+    namespace 'com.aura.aiassistant'
     defaultConfig {
-        applicationId 'com.yourname.aiassistant'
+        applicationId 'com.aura.aiassistant'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
